[gd_scene load_steps=3 format=3 uid="uid://6oay2ktv6ylx"]

[ext_resource type="Script" uid="uid://bailxyw40o2o7" path="res://pause_menu.gd" id="1_8rf44"]
[ext_resource type="FontFile" uid="uid://c6lvcqnjf517l" path="res://Sprites/Fonts/MedodicaRegular.otf" id="2_r2i2h"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8rf44")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -5.0
offset_right = 19.0
offset_bottom = 15.0
color = Color(1, 0.64705884, 0.73333335, 0.2509804)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 181.5
offset_top = 115.0
offset_right = -181.5
offset_bottom = -115.0
grow_horizontal = 2
grow_vertical = 2

[node name="VFlowContainer" type="HFlowContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VFlowContainer"]
custom_minimum_size = Vector2(117, 40)
layout_mode = 2
color = Color(0.5521021, 0.17160293, 0.42320028, 1)

[node name="ResumeButton" type="Button" parent="MarginContainer/VFlowContainer/ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_r2i2h")
theme_override_font_sizes/font_size = 32
text = "Resume"
flat = true

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/VFlowContainer"]
custom_minimum_size = Vector2(117, 40)
layout_mode = 2
color = Color(0.5521021, 0.17160293, 0.42320028, 1)

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VFlowContainer/ColorRect2"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
min_value = -10.0
max_value = 6.0
tick_count = 10
ticks_on_borders = true
ticks_position = 2

[node name="SettingsButton" type="Button" parent="MarginContainer/VFlowContainer/ColorRect2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_r2i2h")
theme_override_font_sizes/font_size = 32
text = "Settings
"
flat = true

[node name="ColorRect3" type="ColorRect" parent="MarginContainer/VFlowContainer"]
custom_minimum_size = Vector2(117, 40)
layout_mode = 2
color = Color(0.5521021, 0.17160293, 0.42320028, 1)

[node name="QuitButton" type="Button" parent="MarginContainer/VFlowContainer/ColorRect3"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("2_r2i2h")
theme_override_font_sizes/font_size = 32
text = "Quit
"
flat = true

[connection signal="pressed" from="MarginContainer/VFlowContainer/ColorRect/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="value_changed" from="MarginContainer/VFlowContainer/ColorRect2/VolumeSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/ColorRect2/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VFlowContainer/ColorRect3/QuitButton" to="." method="_on_quit_button_pressed"]
